--- a/package.json
+++ b/package.json
@@ -5,37 +5,76 @@
   "scripts": {},
   "private": true,
   "dependencies": {
+    "@emotion/react": "11.10.5",
+    "@emotion/styled": "11.10.5",
     "@nestjs/common": "^9.0.0",
     "@nestjs/core": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
     "axios": "^1.0.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.0.0",
     "tslib": "^2.3.0"
   },
   "devDependencies": {
+    "@babel/core": "7.12.13",
+    "@babel/preset-typescript": "7.12.13",
+    "@emotion/babel-plugin": "11.10.5",
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
+    "@nrwl/cypress": "15.6.2",
     "@nrwl/eslint-plugin-nx": "15.6.2",
     "@nrwl/jest": "15.6.2",
     "@nrwl/linter": "15.6.2",
     "@nrwl/nest": "15.6.2",
     "@nrwl/node": "15.6.2",
     "@nrwl/nx-cloud": "latest",
+    "@nrwl/react": "15.6.2",
+    "@nrwl/storybook": "15.6.2",
+    "@nrwl/vite": "15.6.2",
     "@nrwl/webpack": "15.6.2",
     "@nrwl/workspace": "15.6.2",
+    "@storybook/addon-essentials": "^6.5.15",
+    "@storybook/builder-vite": "^0.2.6",
+    "@storybook/core-server": "^6.5.15",
+    "@storybook/react": "^6.5.15",
+    "@svgr/webpack": "^5.4.0",
+    "@swc/core": "^1.2.173",
+    "@testing-library/react": "13.4.0",
     "@types/jest": "28.1.1",
-    "@types/node": "18.7.1",
+    "@types/node": "18.11.9",
+    "@types/react": "18.0.25",
+    "@types/react-dom": "18.0.9",
     "@typescript-eslint/eslint-plugin": "^5.36.1",
     "@typescript-eslint/parser": "^5.36.1",
+    "@vitejs/plugin-react": "^3.0.0",
+    "@vitest/coverage-c8": "~0.25.8",
+    "@vitest/ui": "^0.25.8",
+    "babel-loader": "8.1.0",
+    "cypress": "^12.2.0",
     "eslint": "~8.15.0",
     "eslint-config-prettier": "8.1.0",
+    "eslint-plugin-cypress": "^2.10.3",
+    "eslint-plugin-import": "2.26.0",
+    "eslint-plugin-jsx-a11y": "6.6.1",
+    "eslint-plugin-react": "7.31.11",
+    "eslint-plugin-react-hooks": "4.6.0",
+    "html-webpack-plugin": "^5.5.0",
     "jest": "28.1.1",
     "jest-environment-jsdom": "28.1.1",
+    "jsdom": "~20.0.3",
     "nx": "15.6.2",
     "prettier": "^2.6.2",
+    "react-test-renderer": "18.2.0",
+    "swc-loader": "0.1.15",
     "ts-jest": "28.0.5",
     "ts-node": "10.9.1",
-    "typescript": "~4.8.2"
+    "typescript": "~4.8.2",
+    "url-loader": "^3.0.0",
+    "vite": "^4.0.1",
+    "vite-plugin-eslint": "^1.8.1",
+    "vite-tsconfig-paths": "^4.0.2",
+    "vitest": "^0.25.8"
   }
 }
